--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -55,3 +55,11 @@
     </div>
 </div>
 {% endblock %}
+
+{% block javascripts %}
+    <script>
+        $(document).ready(function(){
+            $('.my-account').addClass('active')
+        })
+    </script>
+{% endblock %}
