--- a/templates/client/nav.html.twig
+++ b/templates/client/nav.html.twig
@@ -1,19 +1,26 @@
-<div class="col-lg-4">
-    <div class="list-group">
-        <button type="button" class="list-group-item list-group-item-action border-0">
-            <a href="#">{% trans %}My account{% endtrans %}<i class="fa fa-user float-right ml-1" aria-hidden="true"></i></a>
-        </button>
-        <button type="button" class="list-group-item list-group-item-action border-0">
-            <a href="#">{% trans %}My orders{% endtrans %}<i class="ml-1 fas fa-box-open float-right"></i> </a>
-        </button>
-    </div>
-    <hr>
-    <div class="list-group">
-        <button type="button" class="list-group-item list-group-item-action border-0">
-            <a href="#">{% trans %}My account{% endtrans %}</a>
-        </button>
-        <button type="button" class="border-0 list-group-item list-group-item-action">
-            <a href="#">{% trans %}My orders{% endtrans %}</a>
-        </button>
+<div class="col-lg-3">
+    <div class="card card-outline card-primary">
+        <div class="card-body">
+            <div class="list-group">
+                <button type="button" class="list-group-item list-group-item-action rounded my-account border-0">
+                    <a href="{{ path('client_index') }}">{% trans %}My account{% endtrans %}<i class="fa fa-user float-right ml-1" aria-hidden="true"></i></a>
+                </button>
+                <button type="button" class="list-group-item list-group-item-action my-orders rounded border-0">
+                    <a href="{{ path('client_order') }}">{% trans %}My orders{% endtrans %}<i class="ml-1 fas fa-box-open float-right"></i> </a>
+                </button>
+                <button type="button" class="list-group-item list-group-item-action my-achat border-0 rounded">
+                    <a href="{{ path('client_order') }}">{% trans %}Mes achats{% endtrans %}<i class="ml-1 fas fa-box-open float-right"></i> </a>
+                </button>
+            </div>
+            <hr>
+            <div class="list-group">
+                <button type="button" class="list-group-item list-group-item-action rounded border-0">
+                    <a href="#">{% trans %}My account{% endtrans %}</a>
+                </button>
+                <button type="button" class="border-0 list-group-item list-group-item-action">
+                    <a href="{{ path('app_logout') }}">{% trans %}Log out{% endtrans %} <i class="fa fa-power-off text-danger float-right" aria-hidden="true"></i></a>
+                </button>
+            </div>
+        </div>
     </div>
 </div>
