--- a/templates/client/order/index.html.twig
+++ b/templates/client/order/index.html.twig
@@ -1,18 +1,28 @@
+{% import "macros/table.html.twig" as table %}
+{% import "macros/head.html.twig" as head %}
+{% import "macros/foot.html.twig" as foot %}
+{% import "macros/breadcrumb.html.twig" as utils %}
+{% import "macros/alertes.html.twig" as alerte %}
+{% import "macros/button.html.twig" as btn %}
+{% import "macros/link.html.twig" as link %}
 {% extends 'base.html.twig' %}
 {% import "macros/search.html.twig" as search %}
 
 {% block title %}Client | {{app_name}} {% endblock %}
 
+{% block stylesheets %}
+  {{ head.dataTable() }}
+{% endblock %}
+
 {% block body %}
 {{ search.search(form) }}
-<pre>
-    {{ dump(orders) }}
-</pre>
+
+
 <div class="container">
     <div class="row mt-3">
             {% include "client/nav.html.twig" %}
-        <div class="col-lg-8">
-                                   <div class="card card-primary card-outline card-tabs">
+        <div class="col-lg-9">
+            <div class="card card-primary card-outline card-tabs">
             <div class="card-header p-0 pt-1 border-bottom-0">
                 <ul class="nav nav-tabs" id="custom-tabs-three-tab" role="tablist">
                     <li class="nav-item">
@@ -27,7 +37,7 @@
                             href="#order-en-attente" role="tab"
                             aria-controls="custom-tabs-three-profile"
                             aria-selected="false">Waiting (<span class="font-weight-bold"> 
-                            {# {{ ordersWaiting| length }} #}
+                            {{ ordersWaiting| length }}
                             </span>)</a>
                     </li>
                     <li class="nav-item">
@@ -35,7 +45,7 @@
                             href="#order-in-progress" role="tab"
                             aria-controls="custom-tabs-three-profile"
                             aria-selected="false">In progress (<span class="font-weight-bold"> 
-                            {# {{ ordersInProgress| length }} #}
+                            {{ ordersInProgress| length }}
                             </span>)</a>
                     </li>
                     <li class="nav-item">
@@ -43,7 +53,7 @@
                             href="#order-canceled" role="tab"
                             aria-controls="custom-tabs-three-profile"
                             aria-selected="false">Canceled (<span class="font-weight-bold"> 
-                            {# {{ ordersCanceled| length }} #}
+                            {{ ordersCanceled| length }}
                             </span>)</a>
                     </li>
                     <li class="nav-item">
@@ -51,7 +61,7 @@
                             href="#order-completed" role="tab"
                             aria-controls="custom-tabs-three-profile"
                             aria-selected="false">Completed (<span class="font-weight-bold"> 
-                            {# {{ ordersCompleted| length }} #}
+                            {{ ordersCompleted| length }}
                             </span>)</a>
                     </li>
                    
@@ -61,31 +71,28 @@
                 <div class="tab-content" id="custom-tabs-three-tabContent">
                     <div class="tab-pane fade show active" id="custom-tabs-three-home"
                         role="tabpanel" aria-labelledby="custom-tabs-three-home-tab">
-                            {{ include ("admin/order/_datatable.html.twig",{id:'1',orders: orders}) }}
+                            {{ include ("client/order/_datatable.html.twig",{id:'1',orders: orders}) }}
                                 
                     </div>
                     <div class="tab-pane fade" id="order-in-progress" role="tabpanel"
                         aria-labelledby="custom-tabs-three-profile-tab">
-                            {# {{ include ("admin/order/_datatable.html.twig",{id:'2',orders: ordersInProgress}) }} #}
+                            {{ include ("client/order/_datatable.html.twig",{id:'2',orders: ordersInProgress}) }}
                     </div>
                     <div class="tab-pane fade" id="order-en-attente" role="tabpanel"
                         aria-labelledby="custom-tabs-three-profile-tab">
-                            {# {{ include ("admin/order/_datatable.html.twig",{id:'3',orders: ordersWaiting}) }} #}
+                            {{ include ("client/order/_datatable.html.twig",{id:'3',orders: ordersWaiting}) }}
                     </div>
                     <div class="tab-pane fade" id="order-completed" role="tabpanel"
                         aria-labelledby="custom-tabs-three-profile-tab">
-                            {# {{ include ("admin/order/_datatable.html.twig",{id:'4',orders: ordersCompleted}) }} #}
+                            {{ include ("client/order/_datatable.html.twig",{id:'4',orders: ordersCompleted}) }}
                     </div>
                     <div class="tab-pane fade" id="order-canceled" role="tabpanel"
                         aria-labelledby="custom-tabs-three-profile-tab">
-                            {# {{ include ("admin/order/_datatable.html.twig",{id:'5',orders: ordersCanceled}) }} #}
+                            {{ include ("client/order/_datatable.html.twig",{id:'5',orders: ordersCanceled}) }}
                     </div>
                 </div>
             </div>
             <!-- /.card -->
-            <div class="card-footer">
-                <a href="{{ path('admin') }}" class="btn btn-default">Back to dashboard <i class="fa fa-arrow-circle-left" aria-hidden="true"></i></a>
-            </div>
         </div>
             <div class="card">
                 <div class="card-header">
@@ -98,4 +105,21 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block foot %}
+{{ foot.dataTable()}}
+{% endblock %}
+
+{% block javascripts %}
+{{ table.jsDataTable('datatable_1') }} 
+{{ table.jsDataTable('datatable_2') }} 
+{{ table.jsDataTable('datatable_3') }} 
+{{ table.jsDataTable('datatable_4') }} 
+{{ table.jsDataTable('datatable_5') }} 
+    <script>
+        $(document).ready(function(){
+            $('.my-orders').addClass('active')
+        })
+    </script>
 {% endblock %}
