--- a/templates/main/article/_article.html.twig
+++ b/templates/main/article/_article.html.twig
@@ -27,7 +27,7 @@
         <h3 class="mb-0 font-weight-semibold">{{ item.formatterPrice }} F</h3>
         <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
         <div class="text-muted mb-3">34 reviews</div> 
-        <a href="{{ path('card_add',{ id: item.id }) }}" type="button" class="btn bg-cart">
+        <a href="{{ path('cart_add',{ id: item.id }) }}" type="button" class="btn bg-cart">
             <i class="fa fa-cart-plus mr-2"></i>
             {% trans %}Add to cart{% endtrans %}
         </a>
