--- a/templates/client/order/index.html.twig
+++ b/templates/client/order/index.html.twig
@@ -5,8 +5,9 @@
 {% import "macros/alertes.html.twig" as alerte %}
 {% import "macros/button.html.twig" as btn %}
 {% import "macros/link.html.twig" as link %}
-{% extends 'base.html.twig' %}
 {% import "macros/search.html.twig" as search %}
+
+{% extends 'lesekoya/base.html.twig' %}
 
 {% block title %}Client | {{app_name}} {% endblock %}
 
