--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -10,6 +10,7 @@
     <!-- Select2 -->
   <link rel="stylesheet" href="{{ asset('adminlte/plugins/select2/css/select2.min.css') }}">
   <link rel="stylesheet" href="{{ asset('adminlte/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css') }}">
+  {% block head %}{% endblock %}
         <title>{% block title %}{{'Welcome'|trans}}! | {{ app_name }} {% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
@@ -375,7 +376,9 @@
   $(document).ready(function(){
     //Initialize Select2 Elements
     $('[data-toggle="tooltip"]').tooltip()
-    $('.select2').select2()
+    $('select').select2({
+      theme:'bootstrap4'
+    })
   })
 </script>
 {% block javascripts %}{% endblock %}
