--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -1,50 +1,51 @@
-{% extends 'base.html.twig' %}
+{% extends 'lesekoya/base.html.twig' %}
 {% import "macros/search.html.twig" as search %}
 
 {% block title %}Client | {{app_name}} {% endblock %}
 
 {% block body %}
-{{ search.search(form) }}
-<div class="container">
-    <div class="row mt-3">
-            {% include "client/nav.html.twig" %}
-        <div class="col-lg-8">
-            <div class="card">
-                <div class="card-header">
-                    <p class="p-0 m-0 h4">{{ 'My account'|trans }}</p>    
-                </div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="card">
-                                <div class="card-header">
-                                    <p class="p-0 m-0 ">Personal information <a href="" class="float-right"><i class="text-success fas fa-pencil-alt    "></i></a> </p>
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">Malick Tounkara</p>
-                                    <p class="text-muted ">malick@store.com</p>
-                                    <p>
-                                        <a href="#" class="text-info 2rem">
-                                            {# Modifier le mot de passe  #}
-                                           {{ 'Change password'|trans }} 
-                                        </a>
-                                    </p>
+<section>
+    <div class="container">
+        <div class="row mt-3">
+                {% include "client/nav.html.twig" %}
+            <div class="col-lg-8">
+                <div class="card">
+                    <div class="card-header">
+                        <p class="p-0 m-0 h4">{{ 'My account'|trans }}</p>    
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <p class="p-0 m-0 ">Personal information <a href="" class="float-right"><i class="text-success fas fa-pencil-alt    "></i></a> </p>
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Malick Tounkara</p>
+                                        <p class="text-muted ">malick@store.com</p>
+                                        <p>
+                                            <a href="#" class="text-info 2rem">
+                                                {# Modifier le mot de passe  #}
+                                            {{ 'Change password'|trans }} 
+                                            </a>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="card">
-                                <div class="card-header">
-                                    <p class="p-0 m-0 ">Adress <a href="#" class="float-right"><i class="text-success fas fa-pencil-alt    "></i></a> </p>
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">Dakar senegal, 11000 dakar Liberte 4</p>
-                                    <p>781278288</p>
-                                    <p>
-                                        <a href="#" class="text-info">
-                                           {{ 'Manage adresses'|trans }}
-                                        </a>
-                                    </p>
+                            <div class="col-6">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <p class="p-0 m-0 ">Adress <a href="#" class="float-right"><i class="text-success fas fa-pencil-alt    "></i></a> </p>
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Dakar senegal, 11000 dakar Liberte 4</p>
+                                        <p>781278288</p>
+                                        <p>
+                                            <a href="#" class="text-info">
+                                            {{ 'Manage adresses'|trans }}
+                                            </a>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -53,7 +54,8 @@
             </div>
         </div>
     </div>
-</div>
+</section>
+
 {% endblock %}
 
 {% block javascripts %}
