--- a/templates/client/order/ajax/select.html.twig
+++ b/templates/client/order/ajax/select.html.twig
@@ -1,6 +1,6 @@
 
-    <select class="custom-select" name="{{ name }}" id="{{id}}">
-        <option selected>select one</option>
+    <select class="custom-select" required name="{{ name }}" id="{{id}}">
+        <option value="">select one</option>
         {% for item in items %}
         <option  value="{{item.id}}">{{item.name}}</option>
         {% endfor %}
