--- a/templates/leSekoya/cart/index.html.twig
+++ b/templates/leSekoya/cart/index.html.twig
@@ -90,73 +90,82 @@
                 </table>
               </div>
               <div class="col-12">
-                <div class="row">
-                <div class="col-lg-4 offset-4">
-                  <p class="h4">Methode de paiment</p>
-                 <ul>
-                    <li class="filter-list">
-                      <input class="pixel-radio" checked type="radio" name="method">
-                      <label for="men">Payment à la livraion</label>
-                    </li>
-                    <li class="filter-list">
-                      <input class="pixel-radio" type="radio" name="method">
-                      <label for="men">Orange Money</label>
-                    </li>
-                    <li class="filter-list">
-                      <input class="pixel-radio" type="radio" name="method">
-                      <label for="men">Wave</label>
-                    </li>
-                 </ul>
-                </div>
-                  <div class="col-lg-4">
-                    <form id="shipping-amount" method="POST" action="{{ path('cart_step_1') }}">
-                      <div class="row">
-                        <div class="col-lg-12">
-                          <p class="h4">Adress de livraison</p>
-                              <div class="shipping_box">
-                                <div class="form-group loader-city">
-                                  <select class="custom-select" name="city" id="select-city">
-                                    {% for item in cities %}
-                                    <option name="city" value="{{ item.id}}">{{ item.name }}</option>
-                                    {% endfor %}
-                                  </select>
-                                </div>
-                                <div class="form-group">
-                                  <div id="loader-select-street" class="text-center loader">
-                                    <i class="fas fa-2x fa-sync-alt fa-spin"></i>
+                <form id="shipping-amount" method="POST" action="{{ path('order_client_new') }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                  <div class="row">
+                    <div class="col-lg-4 offset-4">
+                      <p class="h4">Methode de paiment</p>
+                    <ul>
+                        <li class="filter-list">
+                          <input class="pixel-radio" value="Payment à la livraison" checked type="radio" name="method">
+                          <label for="men">Payment à la livraion</label>
+                        </li>
+                        <li class="filter-list">
+                          <input class="pixel-radio" value="Orange Money" type="radio" name="method">
+                          <label for="men">Orange Money</label>
+                        </li>
+                        <li class="filter-list">
+                          <input class="pixel-radio" value="Wave" type="radio" name="method">
+                          <label for="men">Wave</label>
+                        </li>
+                    </ul>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <p class="h4">Adress de livraison</p>
+                            {# {{ form_start(form_delivery_space)}}
+                            {{ form_widget(form_delivery_space)}}
+                            {{ form_end(form_delivery_space)}} #}
+                                <div class="shipping_box">
+                                  <div class="form-group loader-city">
+                                    <select class="custom-select" name="city" id="select-city">
+                                      {% for item in cities %}
+                                      <option name="city" value="{{ item.id}}">{{ item.name }}</option>
+                                      {% endfor %}
+                                    </select>
                                   </div>
-                                    <div id="js-select-street">
-                                      <select class="custom-select select-street" id="streets" name="street">
-                                        <option select>Choisir</option>
-                                        {% for item in streets %}
-                                        <option value="{{ item.id }}">{{ item.name }}</option>
-                                        {% endfor %}
-                                      </select>
+                                  <div class="form-group">
+                                    <div id="loader-select-street" class="text-center loader">
+                                      <i class="fas fa-2x fa-sync-alt fa-spin"></i>
                                     </div>
-                                </div>
-                                <div class="card border-0">
-                                  <div id="loader-street-amount" class="text-center loader">
-                                    <i class="fas fa-2x fa-sync-alt fa-spin"></i>
+                                      <div id="js-select-street">
+                                        <select required class="custom-select select-street" id="streets" name="street">
+                                          <option value="">Choisir le lieu de livraison</option>
+                                          {% for item in streets %}
+                                          <option value="{{ item.id }}">{{ item.name }}</option>
+                                          {% endfor %}
+                                        </select>
+                                      </div>
                                   </div>
-                                  <div class="card-body  js-amount"></div>
+                                  <div class="card border-0">
+                                    <div id="loader-street-amount" class="text-center loader">
+                                      <i class="fas fa-2x fa-sync-alt fa-spin"></i>
+                                    </div>
+                                    <div class="card-body  js-amount"></div>
+                                    <h3>Total : <span id="total"></span> </h3>
+                                  </div>
                                 </div>
-                              </div>                        
-                              
-                        </div>
-                        <div class="col-lg-12">
-                          <div class="row">
-                            <div class="col text-center mb-2">
-                                <a class="gray_btn btn-primary w-100" href="{{ path('articles') }}">Continue Shopping</a>
-                            </div>
-                            <div class="col">
-                              <button type="sumbit" class="btn btn-warning w-100">Proceed to checkout</button>
+                          </div>
+                          <div class="col-lg-12">
+                            <div class="row">
+                              <div class="col text-center mb-2">
+                                  <a class="gray_btn btn-primary w-100" href="{{ path('articles') }}">Continue Shopping</a>
+                              </div>
+                              {% if is_granted('ROLE_CLIENT') %}
+                              <div class="col">
+                                <button type="sumbit" class="btn btn-warning w-100">Proceed to checkout</button>
+                              </div>
+                              {% else %}
+                                <div class="col-lg-12">
+                                  <p class="h4">Connecter vous ou creer un compte pour commander</p>
+                                </div>
+                              {% endif %}
                             </div>
                           </div>
                         </div>
-                      </div>
-                    </form>
+                    </div>
                   </div>
-                </div>
+                </form>
               </div>
           </div>
       </div>
@@ -167,6 +176,11 @@
 {% block javascripts %}
 <script>
   $(document).ready(function(){
+    $('#total').text(total())
+    function total(val = 0){
+      let total = {{total }} + val ;
+      return total
+    }
     $(document).on('change','#select-city',function(){
       //on recupere l'id de la ville
       let value = $(this).val()
@@ -209,7 +223,9 @@
         success:function(data){
           $('.js-amount').html(data.response).show()
           $('#loader-street-amount').hide()
-          // console.log(data.response)
+          $('#total').text(total(data.amount))
+
+          console.log(data.amount)
         }
       })
     })
