--- a/templates/leSekoya/cart/order-step-1.html.twig
+++ b/templates/leSekoya/cart/order-step-1.html.twig
@@ -11,7 +11,8 @@
 </ol>
 <main class="site-main">
 
-  <section class="cart_areax"  style="background: #e9ecef;">
+  <section class="cart_areax">
+    <form action="" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
       <div class="container">
           <div class="row bg-white mt-2 pb-5 rounded">
             <div class="col-12">
@@ -48,7 +49,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <p class="h4">Methode de payment:</p>
-                        <p>Payment à la livraison</p>
+                        <p>{{ methodPayment }}</p>
                     </div>
                     <div class="col-6">
                         <table class="table">
@@ -68,6 +69,7 @@
                                 <h5>Montant de la livraion</h5>
                             </td>
                             <td>
+                                <input type="hidden" name="shipping_amount" value="{{ shippingAmount }}">
                                 {{ shippingAmount|number_format(2,'.',' ') }} {{ site.current }}
                             </td>
                         </tr>
@@ -77,6 +79,7 @@
                                 <h5>Total</h5>
                             </td>
                             <td>
+                                <input type="hidden" name="total"  value="{{ (shippingAmount + subtotal) }}">
                                 {{ (shippingAmount + subtotal) |number_format(2,'.',' ') }} {{ site.current }}
                             </td>
                         </tr>
@@ -87,23 +90,21 @@
             </div>
             <div class="col-lg-6 mx-auto">
                 <div class="row">
-                    <div class="col-sm">
-                     <a href="{{ path('cart_index') }}" class="btn btn-primary btn-lg">
-                        Retour au panier
-                    </a>
-                    </div>
-                    <div class="col-sm">
-                        <button class="btn btn-primary btn-lg">
-                        Commander
-                        </button>
+                    <div class="col-12">
+                        {% if is_granted('ROLE_CLIENT') %}
+                            <button  type="submit" class="btn btn-primary btn-lg">
+                            Commander
+                            </button>
+                        {% else %}
+                            Pour commander connecter vous ou creer un compte. :) 
+                            <a class="btn btn-primary" href="{{ path('app_login') }}">Connecter vous ou créer un compte</a>
+                        {% endif %}
                     </div>
                 </div>
-                   
-                    
-            
             </div>
           </div>
       </div>
+    </form>
   </section>
 </main>
 {% endblock %}
